--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "run-s build:clean build:style react:start",
     "react:start": "react-scripts --max_old_space_size=4096 start",
-    "react:build": "react-scripts --max_old_space_size=4096 build",
+    "react:build": "CI=false && react-scripts --max_old_space_size=4096 build",
     "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
     "build:clean": "rimraf ./build",
     "build": "run-s build:clean build:style react:build"
